--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="bingsolver.css">
     <title>Document</title>
 </head>
 <body>
-    <p>Hi guys!</p>
+    <div class="logo-c">
+        <img src="src/assets/microsoft.png" alt="Microsoft Logo" class="ms-logo">
+        <p class="vertical-center bing-solver unselectable">Rodukov Bing</p>
+    </div>
+    <div>
+        <p style="text-align: center;"><input type="text" id="search_bs" placeholder="Search with Bing Solver"></p>
+        <p class="slogan">An cleared extension for Microsoft Bing</p>
+    </div>
+    <div class="menu">
+        
+    </div>
 </body>
 </html>
