--- a/index.html
+++ b/index.html
@@ -9,15 +9,25 @@
 </head>
 <body>
     <div class="logo-c">
-        <img src="src/assets/microsoft.png" alt="Microsoft Logo" class="ms-logo">
+        <img src="src/assets/microsoft_bingsolver2.png" alt="Microsoft Logo" class="ms-logo">
         <p class="vertical-center bing-solver unselectable">Rodukov Bing</p>
     </div>
     <div>
         <p style="text-align: center;"><input type="text" id="search_bs" placeholder="Search with Bing Solver"></p>
-        <p class="slogan">An cleared extension for Microsoft Bing</p>
+        <div class="bs_items_results">
+            <p class="search_bs_item">Nature</p>
+            <p class="search_bs_item">Weather</p>
+            <p class="search_bs_item">Some result 1</p>
+            <p class="search_bs_item">Some Result 2</p>
+        </div>
     </div>
+    <p class="slogan">An cleared extension for Microsoft Bing</p>
     <div class="menu">
-        
+        <div class="menu-items">
+            <img src="src/assets/icons8-search-48.png" alt="Search BingSolver" class="menu-img">
+            <img src="src/assets/icons8-github-48.png" alt="View project on GitHub" class="menu-img">
+            <img src="src/assets/icons8-info-48.png" alt="Basic information about BingSolver" class="menu-img">
+        </div>
     </div>
 </body>
 </html>
